# evm-lab-6

./: CMakeLists.txt  main.cpp  result.txt
